crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__a_try_gives_every_protected_call_its_own_landing_block.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn <script>() -> mixed {
  bb0:
    safepoint
    ; stmt s0 @5:1-10:2
    ; stmt s1 @6:3-6:11
    v0 = call T::go() ! bb3  ; void
    ; stmt s2 @7:3-7:15
    v1 = const.str "fine"  ; string
    helper.echo_str v1 ! bb4
    release v1
    jump bb2
  bb1:
    v2 = take.thrown  ; throwable
    ; stmt s3 @9:3-9:25
    v3 = throwable.message v2  ; string
    helper.echo_str v3 ! bb5
    release v3
    release v2
    jump bb2
  bb2:
    return
  bb3:
    catch -> bb1
  bb4:
    catch -> bb1
  bb5:
    release v2
    propagate "<script>() at t.mwl:9"
}
