crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__a_uint_backed_enum_case_lowers_to_a_uint_constant.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn <script>() -> mixed {
  bb0:
    safepoint
    ; stmt s0 @3:1-3:28
    v0 = const.uint 2  ; enum:uint
    v1 = reinterpret v0  ; uint
    return
}
