crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__an_array_condition_converts_through_a_truthy_helper.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, array) -> bool {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; array
    ; stmt s0 @4:5-6:6
    v2 = helper.array_truthy v1  ; bool
    branch v2 -> bb2 (e0), bb1 (e1)
  bb1:
    ; stmt s3 @7:5-7:18
    v4 = const.bool false  ; bool
    release v1
    release v0
    return v4
  bb2:
    ; stmt s1 @4:13-6:6
    ; stmt s2 @5:7-5:19
    v3 = const.bool true  ; bool
    release v1
    release v0
    return v3
}
