crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__an_empty_array_literal_lowers_with_no_entries.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> array {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-4:15
    v1 = array.new []  ; array
    release v0
    return v1
}
