crates/mwl-ir/src/snapshots/mwl_ir__lower__tests__an_instance_method_call_through_a_local_receiver.snap
---
source: crates/mwl-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> int {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @9:5-9:26
    v1 = new Foo() ! bb1  ; object
    ; stmt s1 @10:5-10:26
    v2 = call Foo::greet(this: v1) ! bb2  ; int
    return v2
  bb1:
    propagate "m() at t.mwl:9"
  bb2:
    propagate "m() at t.mwl:10"
}
